test/ui/tests/missing-intrinsic-type.lushui
;;; TEST fail check --no-core

data It: Type of { it: It }

make (it: It): It = It.it

it0: It = make "test"
it1: It = make 344
it2: It = make @Int32 0 


